# mimdb

./: Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md
.github/workflows/: api.yml  rust.yml
api/: dbmsInterface.yaml
examples/: Cargo.toml  README.md  batch_processing.rs  data_analysis.rs  simple_usage.rs
examples/data/: edge_cases_example.mimdb  edge_cases_example.txt  employee_example.mimdb  employee_example.txt  large_dataset_example.txt  sales_example.mimdb  sales_example.txt  simple_example.mimdb  simple_example.txt  student_grades_example.mimdb  student_grades_example.txt
mimdb/: Cargo.toml
mimdb/src/: compression.rs  lib.rs  metastore.rs  metrics.rs  serialization.rs
mimdb/src/api/: executor.rs  handlers.rs  mod.rs  models.rs  swagger.rs
mimdb/tests/: README.md  api_tests.rs  integration_tests.rs  integrity_tests.rs  serialization_tests.rs
scripts/: validate_api.py
src/: main.rs
