[package]
name = "mimdb"
version = "0.1.0"
edition = "2024"
description = "A Columnar Analytical Database Library"
license-file = "LICENSE.md"

[lib]
name = "mimdb"
path = "src/lib.rs"

[dependencies]
zstd = "0.13"
lz4_flex = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"

[[bin]]
name = "generate_examples"
path = "bin/generate_examples.rs"

[[bin]]
name = "loader"
path = "bin/loader.rs"

[dev-dependencies]
tempfile = "3.0"
